@@ -24,12 +24,22 @@ required='hevea'
 
 set -e
 
-# For the creation of auxiliary files.
-create_input_tex <<EOF
-\tableofcontents
-\section{First}
-\section{Second}
-EOF
+# Force the creation of auxiliary files.
+# Force it to be big enough to trigger the info file splitting.
+{
+  echo "\tableofcontents"
+  for section in 1 2 3 4 5 6
+  do
+    echo "\section{$i}"
+    for subsection in 1 2 3 4 5 6
+    do
+      echo "\subsection{$i}"
+      echo "$latex_paragraph"
+    done
+  done
+} |
+create_input_tex
+
 
 # run_hevea_check FORMAT OPTIONS
 # ------------------------------
@@ -43,6 +53,13 @@ run_hevea_check ()
   # Testing the local build mode.
   TEXI2DVI_pass --batch --$format "$@" input.tex
 
+  # Compute the expected output.
+  outfiles=input.$out
+  case $format in
+     info) outfiles="$outfiles input.info-1 input.info-2";;
+  esac
+
+  # Compute the aux files.
   case $format:$@ in
     *clean* ) auxfiles='';;
      *tidy* ) auxfiles='input.t2d';;
@@ -51,8 +68,8 @@ run_hevea_check ()
           * ) auxfiles='';;
   esac
   # There should only be the expected output and the source file.
-  assert_files $auxfiles input.$out input.tex
-  rm -fr $auxfiles input.$out
+  assert_files input.tex $outfiles $auxfiles
+  rm -fr $outfiles $auxfiles
 }
 
 for opt in "" "--clean" "--tidy"
